--- a/day-3-first-folder/centering-in-container.css
+++ b/day-3-first-folder/centering-in-container.css
@@ -47,12 +47,11 @@ table {
 	border-spacing: 0;
 }
 
-h1 {
-	font-family: sans-serif;
-	font-weight: bold;
-	background: yellow;
-	text-align: center;
-	max-width: 600px;
-	margin: 0 auto 0 auto;
+.container {
+  background-color: gray;
+}
 
+
+h1 {
+  border: solid 1px red;
 }
