--- a/day-3-first-folder/jesse.css
+++ b/day-3-first-folder/jesse.css
@@ -47,12 +47,11 @@ table {
 	border-spacing: 0;
 }
 
-h1 {
-	font-family: sans-serif;
-	font-weight: bold;
-	background: yellow;
-	text-align: center;
-	max-width: 600px;
-	margin: 0 auto 0 auto;
+.nav-container {
 
+}
+
+.nav-elements {
+  list-style-type: none;
+  float: right;
 }
