--- a/day-3-first-folder/position.css
+++ b/day-3-first-folder/position.css
@@ -47,12 +47,36 @@ table {
 	border-spacing: 0;
 }
 
-h1 {
-	font-family: sans-serif;
-	font-weight: bold;
-	background: yellow;
-	text-align: center;
-	max-width: 600px;
-	margin: 0 auto 0 auto;
+body {
+  margin-top: 50px;
+}
 
+.second {
+  position: relative;
+  left: 30px;
+  background-color: pink;
+  text-align: right;
+}
+
+.outer-box {
+border: solid 1px black;
+height: 300px;
+width: 300px;
+position: relative;
+}
+
+.inner-box {
+  background-color: red;
+  height: 25px;
+  width: 25px;
+  position: absolute;
+
+}
+
+nav {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
 }
