--- a/day-3-first-folder/positioning-excercise.css
+++ b/day-3-first-folder/positioning-excercise.css
@@ -47,12 +47,84 @@ table {
 	border-spacing: 0;
 }
 
-h1 {
-	font-family: sans-serif;
-	font-weight: bold;
-	background: yellow;
+/* END OF RESET */
+h1 h2 h3 ul li p {
+  font-family: sans-serif;
+}
+
+.container {
+  border: solid 2px gray;
+  border-radius: 10px;
+  max-width: 500px;
+  height: 600px;
+  margin: 50px auto 0 auto;
+	position: relative;
+
+}
+
+.circle {
+	border-radius: 50%;
+	background: gray;
+	border: solid 2px black
+	color: white;
+	position: absolute;
+	height: 120px;
+	width: 120px;
+	margin-top: 50px;
+	position: absolute;
+	top: 40px;
+	right: -50px;
 	text-align: center;
-	max-width: 600px;
-	margin: 0 auto 0 auto;
+}
+.circle p {
+	font-family: sans-serif;
+	text-align: center;
+	padding-top: 40px;
+	font-size: 2.8em;
+	margin: 0 auto;
+	color: white;
+}
+h1 {
+  margin-top: 50px;
+	margin-left: 60px;
+  color: green;
+	font-family: sans-serif;
+	font-size: 36px;
+	font-weight: bold;
+
+}
+
+h2 {
+	margin-top: 50px;
+	margin-left: 60px;
+	color: grey;
+	font-family: sans-serif;
+	font-size: 30px;
+	font-weight: bold;
+
+}
+
+.ul-square {
+	list-style: square;
+	margin-top: 20px;
+	margin-left: 90px;
+	color: gray;
+	font-family: sans-serif;
+	font-size: 30px;
+}
+.social-links {
+	overflow: auto;
+	margin: 0 auto;
+	margin-left: 80px;
+}
+.social-links div{
+	border: 1px black solid;
+	height: 20px;
+	width: 20px;
+	float: left;
+	margin-top: 10px;
+	margin-right: 40px;
+
+
 
 }
