--- a/day-4-float/day-4-jesse/jesse.css
+++ b/day-4-float/day-4-jesse/jesse.css
@@ -126,7 +126,134 @@ table {
 	color: white;
 	width: 500px;
 	padding: 20px;
+}
+.work-together:hover {
+	background-color: yellow;
+	color: white;
+}
 
+/****************************************************/
+/*PROJECTS SECTION*/
+/****************************************************/
+
+.recent-projects{
+	padding: 50px 0;
+	overflow: auto;
+}
+
+@media (max-width: 700px) {
+.recent-projects .projects{
+	float: left;
+	width:  46%;
+}
+}
+
+@media (max-width: 460px){
+	.recent-projects .projects {
+		float: none;
+		width: 100%;
+	}
+}
+
+.projects {
+	width: 29.333333%;
+	float: left;
+	margin: 0 2% 50px 2%;
+	text-align: center;
+	line-height: 2;
+
+
+}
+.projects img {
+	width: 85%;
+}
+.projects h3{
+	font-size: 2em;
+	color: rgb(63, 150, 200);
+}
+.projects p {
+	color: gray;
+	font-family: sans-serif;
+	font-size: 1.22em;
+}
+
+/*******************************************/
+/*STORY*/
+/*******************************************/
+.story {
+	background-size: cover;
+	background-image: url("banner-working.jpg");
+	background-repeat:no-repeat;
+	background-color: rgb(100, 107, 111);
+	height: 500px;
+	max-height: 500px;
+	padding: 50px;
+	position: relative;
+}
+.story-details {
+	height: 400px;
+	width: 50%;
+}
+.story-details {
+	text-align: left;
+
+}
+.story-details h2{
+	color: yellow;
+	font-size: 3em;
+	line-height: 2;
+}
+.story-details p {
+	color: white;
+	font-family: sans-serif;
+	font-size: 1.17em;
+	line-height: 2;
+}
+@media (max-width: 600px){
+	.story-details h2 {
+		line-height: 1.5;
+	}
+}
+.full-story {
+	color: white;
+	border: solid 2px yellow;
+	font-family: sans-serif;
+	font-size: 1.5em;
+	padding: 20px;
+	text-align: center;
+
+	width: 300px;
+}
+a:link {
+	text-decoration: none;
+}
+.what-i-do {
+	width: 90%;
+	margin: 0 auto;
+	overflow: auto;
+
+}
+
+.particular-thing {
+	width: 25%;
+	outline: solid 1px red;
+	float: left;
+	background-color: pink;
+	height: 200px;
+}
+.footer {
+	margin: 0 auto;
+	overflow: auto;
+	width: 90%;
+
+}
+.circle {
+	float: left;
+	background-color: red;
+	height: 100px;
+	width: 25%;
+	border-radius: 50%;
+	margin:
 
 
 }
