--- a/day-7-iron-news/stylesheet.css
+++ b/day-7-iron-news/stylesheet.css
@@ -126,6 +126,10 @@ a:link {
   color: black;
   text-decoration: none;
 }
+.articles a:link {
+	color: black;
+  text-decoration: none;
+}
 a:active {
   color: black;
   text-decoration: none;
