--- a/day-12-octocats/style.css
+++ b/day-12-octocats/style.css
@@ -51,7 +51,7 @@ table {
 /* END OF RESET */
 
 .octodex {
-	border: 10px solid black;
+
 	margin: 0 auto;
 	overflow: auto;
 	text-align: center;
@@ -63,7 +63,7 @@ table {
 
 
 .octocat {
-	border: 8px solid purple;
+
 	float: left;
 	margin: 10px;
 	text-align: center;
@@ -72,7 +72,7 @@ table {
 }
 
 img {
-	border: 5px solid red;
+	border: 1px solid gray;
 	float: left;
 	margin: 0 15px;
 	padding: 20px;
@@ -82,22 +82,37 @@ img {
 }
 
 .image-footer {
-	border: 5px solid blue;
+	border-bottom: 1px solid gray;
 	float: left;
 	margin: 30px 0;
+	padding: 10px 0;
 	width: 350px;
 }
 .image-number {
-	border: 10px solid yellow;
+
 	color: gray;
 	float: left;
+
 }
 .image-caption {
-	border: 5px solid green;
-	float: right;
+
+	width: 300px;
 }
 
 .authors img {
-	border 10px solid pink;
-	width: 10px;
+
+	display: inline;
+
+	float: right;
+	margin: 0 auto;
+	padding: 0;
+	width: 20px;
+}
+
+span {
+	color: gray;
+}
+a:link, a:visited {
+	color: black;
+	text-decoration: none;
 }
