--- a/day-12-octocats/style.css
+++ b/day-12-octocats/style.css
@@ -83,8 +83,9 @@ img {
 
 .image-footer {
 	border-bottom: 1px solid gray;
-	float: left;
-	margin: 30px 0;
+	float: right;
+	margin: 30px 0px;
+	margin-left: 100px;
 	padding: 10px 0;
 	width: 350px;
 }
@@ -92,21 +93,28 @@ img {
 
 	color: gray;
 	float: left;
+	margin-left: 20px;
 
 }
 .image-caption {
-
+	float: right;
 	width: 300px;
 }
 
 .authors img {
-
+	border: none;
+	border-radius: 4px;
 	display: inline;
 
 	float: right;
 	margin: 0 auto;
+	margin-right: 5px;
 	padding: 0;
 	width: 20px;
+}
+.authors {
+	float: right;
+
 }
 
 span {
