--- a/day-16-multi-toggle-on-click/style.css
+++ b/day-16-multi-toggle-on-click/style.css
@@ -62,7 +62,6 @@ header {
 	line-height: 2;
 	margin: 0 auto;
 	text-align: center;
-
 }
 
 .div-container {
@@ -75,7 +74,7 @@ header {
   text-align: center;
 }
 
-.bubble h1 {
+h1 {
   color: #7BDFF2;
   font-size: 1.8em;
   line-height: 5;
@@ -86,8 +85,9 @@ header {
   border: 5px solid #9E898F;
   border-radius: 100%;
   float: left;
+	height: 150px;
+	line-height: 8;
   margin:200px 20px;
-
   width: 10%;
 }
 
