--- a/day-12-octocats/style.css
+++ b/day-12-octocats/style.css
@@ -86,7 +86,7 @@ img {
 	float: right;
 	margin: 30px 0px;
 	margin-left: 100px;
-	padding: 10px 0;
+	padding: 0px 0;
 	width: 350px;
 }
 .image-number {
@@ -97,15 +97,18 @@ img {
 
 }
 .image-caption {
+	text-align: right;
 	float: right;
+	font-family: sans-serif;
+	font-size: .9em;
 	width: 300px;
+	margin-right: 5px;
 }
 
 .authors img {
 	border: none;
 	border-radius: 4px;
 	display: inline;
-
 	float: right;
 	margin: 0 auto;
 	margin-right: 5px;
@@ -114,8 +117,8 @@ img {
 }
 .authors {
 	float: right;
-
 }
+
 
 span {
 	color: gray;
