--- a/day-19-simple-slide-show/style.css
+++ b/day-19-simple-slide-show/style.css
@@ -3,6 +3,7 @@
    License: none (public domain)
 */
 
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -48,9 +49,37 @@ table {
 }
 
 
-.link {
-	background-image: url(sprite.png);
-	background-position-y:-500px;
-	height: 150px;
+header {
+  background-color: #A4BAB7;
+  color: ##FFED65;
+  height: 100px;
+  font-size: 1em;
+  text-align: center;
+  width: 100%;
+}
+
+
+.slide-show {
+	border: 1px solid red;
+	color: white;
+	margin: 0 auto;
 	width: 100px;
+}
+
+.chuck-death {
+	background-image: chuck-norris-death.jpg;
+	background-size: 150px;
+
+}
+
+
+
+
+
+
+.button-box {
+
+	margin: 0 auto;
+	padding: 30px;
+	text-align: center;
 }
