--- a/day-21-first-ajax/style.css
+++ b/day-21-first-ajax/style.css
@@ -79,15 +79,13 @@ header h1 {
   text-align: center;
   width: 24%;
 }
-ul {
 
-}
 ul li{
   border: 10px solid white;
   float: left;
   margin: 0 auto;
   text-align: center;
-  width: 24%;
+  width: 33%;
 }
 
 ul li:hover {
@@ -106,8 +104,11 @@ ul h2 {
 
 ul div {
   color: white;
+	line-height: 1.2;
+	padding-bottom: 5px;
 }
 
 ul div:hover {
   color: white;
+	line-height: 1.2;
 }
